TheMightyDude (15 September 2012)
--------------------------------------
Fixed PHP Notice: Undefined variable: level_factor in includes/calc_planet_torps.php on line 34
Fixed PHP Notice: Undefined variable: planetinfo in includes/planet_combat.php on multi lines.
Fixed PHP Notice: Undefined variable: l_planet_capture1 in includes/planet_combat.php on a couple of lines.

TheMightyDude (11 September 2012)
--------------------------------------
Fixed PHP Warning: include(../footer.php): failed to open stream: No such file or directory in includes/traderoute_new.php on line 404
Fixed PHP Warning: include(): Failed opening '../footer.php' for inclusion (include_path='.') in includes/traderoute_new.php on line 404
Fixed bug where it doesn't display the complete link to capture a planet after you have attacked and won the battle.
Fixed PHP Notice: Undefined index: team in teams.php on line 638

TheMightyDude (10 September 2012)
--------------------------------------
Fixed ERROR: FUNCTION blacknova_svn_db.SUM does not exist. Check the 'Function Name Parsing and Resolution' section in the Reference Manual.
Fixed Bug in db_op_result where if a db query got an error it would insert an admin log with type 0 instead of type 15.
Fixed bug in admin_log where it check for an empty type, should be is_int.
Fixed PHP Notice: Undefined variable: l_news_none in fader.php and moved over to use the $langvars array.
Added new language variable l_news_end for all support languages which is "End of News" was hardcoded.

TheMightyDude (08 September 2012)
--------------------------------------
Fixed Ranking page so that it passes the language through it correctly, not how I would do it, but hey.
Added language variable l_online, l_offline and l_status to all 4 supported languages to the common category to be used on the ranking page.
A couple of players requested the player online status to be a different color than the offline status.

TheMightyDude (07 September 2012)